--- a/pages/dot-line/index.html
+++ b/pages/dot-line/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<meta name="viewport" content="width=device-width">
+	<title>dot-line demo</title>
+	<link rel="stylesheet" href="../common/basic.css">
 </head>
 <body>
+<h1>dot-line demo</h1>
 <div id="dl"></div>
+<div id="footer">
+	<a href="https://github.com/oldj/fe-demo/tree/master/pages/dot-line">Source</a>
+</div>
 <script src="../dist/dot-line.bundle.js"></script>
 <script>
   new DotBoard(document.getElementById('dl'), 800, 600, {
